--- a/styles.css
+++ b/styles.css
@@ -961,6 +961,9 @@ html {
   max-width: 1200px;
 }
 .carousel__list-item[data-v-06426b3c] {
+  display: flex;
+  width: 100% 0;
+  justify-content: center;
   flex-shrink: 0;
   position: relative;
   width: 100%;
@@ -1007,7 +1010,10 @@ html {
 .carousel__info[data-v-06426b3c] {
   position: absolute;
   bottom: 30px;
-  left: 30px;
+  padding: 0 10px;
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 500px;
 }
 .carousel__title[data-v-06426b3c] {
   display: grid;
@@ -1034,9 +1040,7 @@ html {
   width: 110%;
   font-size: 16px;
   width: 100%;
-  max-width: 400px;
   color: #ffffff;
-  box-sizing: border-box;
   padding: 25px;
   position: relative;
   z-index: 20;
