--- a/styles.css
+++ b/styles.css
@@ -694,6 +694,11 @@ html {
   margin: 0;
   text-transform: uppercase;
 }
+@media screen and (max-width: 768px) {
+.section__title[data-v-be32b258] {
+    font-size: 48px;
+}
+}
 /*!**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-4.use[1]!./node_modules/vue-loader/lib/loaders/stylePostLoader.js!./node_modules/postcss-loader/dist/cjs.js??clonedRuleSet-4.use[2]!./node_modules/sass-loader/dist/cjs.js??clonedRuleSet-4.use[3]!./node_modules/vue-loader/lib/index.js??vue-loader-options!./src/components/AboutSection.vue?vue&type=style&index=0&id=292bd2c8&lang=scss&scoped=true& ***!
   \**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
@@ -888,6 +893,7 @@ html {
 .project[data-v-970da4ea] {
   overflow: hidden;
   width: 100%;
+  height: 475px;
 }
 .project__figure[data-v-970da4ea] {
   display: flex;
@@ -943,10 +949,15 @@ html {
   display: grid;
   width: 100%;
   height: 100%;
-  max-height: 800px;
+  min-height: 700px;
   overflow: hidden;
   position: relative;
   max-width: 1200px;
+}
+@media screen and (max-width: 768px) {
+.carousel[data-v-06426b3c] {
+    min-height: 500px;
+}
 }
 .carousel__list[data-v-06426b3c] {
   display: flex;
@@ -962,11 +973,10 @@ html {
 }
 .carousel__list-item[data-v-06426b3c] {
   display: flex;
-  width: 100% 0;
+  width: 100%;
   justify-content: center;
   flex-shrink: 0;
   position: relative;
-  width: 100%;
   max-width: 1200px;
 }
 .carousel__dots[data-v-06426b3c] {
@@ -1015,6 +1025,11 @@ html {
   width: 100%;
   max-width: 500px;
 }
+@media screen and (max-width: 768px) {
+.carousel__info[data-v-06426b3c] {
+    max-width: 300px;
+}
+}
 .carousel__title[data-v-06426b3c] {
   display: grid;
   width: 110%;
@@ -1024,6 +1039,11 @@ html {
   z-index: 20;
   position: relative;
   justify-content: center;
+}
+@media screen and (max-width: 768px) {
+.carousel__title[data-v-06426b3c] {
+    font-size: 24px;
+}
 }
 .carousel__title[data-v-06426b3c]::after {
   position: absolute;
@@ -1041,9 +1061,14 @@ html {
   font-size: 16px;
   width: 100%;
   color: #ffffff;
-  padding: 25px;
+  padding: 15px;
   position: relative;
   z-index: 20;
+}
+@media screen and (max-width: 768px) {
+.carousel__text[data-v-06426b3c] {
+    font-size: 12px;
+}
 }
 .carousel__text[data-v-06426b3c]::after {
   position: absolute;
