--- a/styles.css
+++ b/styles.css
@@ -952,7 +952,6 @@ html {
   min-height: 700px;
   overflow: hidden;
   position: relative;
-  max-width: 1200px;
 }
 @media screen and (max-width: 768px) {
 .carousel[data-v-06426b3c] {
@@ -990,7 +989,7 @@ html {
   gap: 10px;
   position: absolute;
   justify-self: center;
-  align-self: end;
+  align-self: start;
   z-index: 20;
 }
 .carousel__dots-item[data-v-06426b3c] {
@@ -1126,7 +1125,7 @@ html {
   \*************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
 .team[data-v-1bbc0870] {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1170px;
   box-sizing: border-box;
 }
 /*!*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
