--- a/styles.css
+++ b/styles.css
@@ -1095,14 +1095,15 @@ html {
   cursor: pointer;
   transition: 0.5s;
   display: flex;
-  width: 60px;
+  width: 40px;
   margin: 15px;
   border-radius: 5px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background: transparent;
   align-self: center;
   z-index: 20;
-  height: 60px;
-  border: 2px solid #f22f20;
+  height: 40px;
+  border-top: 2px solid #f22f20;
+  border-bottom: 2px solid #f22f20;
   position: absolute;
   -webkit-transform: translateX(0);
           transform: translateX(0);
