--- a/styles.css
+++ b/styles.css
@@ -815,6 +815,51 @@ html {
 }
 }
 /*!*****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-4.use[1]!./node_modules/vue-loader/lib/loaders/stylePostLoader.js!./node_modules/postcss-loader/dist/cjs.js??clonedRuleSet-4.use[2]!./node_modules/sass-loader/dist/cjs.js??clonedRuleSet-4.use[3]!./node_modules/vue-loader/lib/index.js??vue-loader-options!./src/components/ContactsSection.vue?vue&type=style&index=0&id=0cb7b412&lang=scss&scoped=true& ***!
+  \*****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.contacts__container[data-v-0cb7b412] {
+  display: grid;
+  width: 100%;
+  grid-gap: 30px 15px;
+  gap: 30px 15px;
+  box-sizing: border-box;
+  padding: 0 10px;
+  max-width: 1170px;
+  grid-template-columns: 1fr 1fr;
+}
+@media screen and (max-width: 768px) {
+.contacts__container[data-v-0cb7b412] {
+    grid-template-columns: 1fr;
+}
+}
+.contacts__list[data-v-0cb7b412] {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr;
+  align-content: start;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 20px;
+  color: #2d3033;
+  grid-gap: 20px 40px;
+  gap: 20px 40px;
+}
+@media screen and (max-width: 768px) {
+.contacts__list[data-v-0cb7b412] {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+}
+.contacts__list-item[data-v-0cb7b412] {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 5px;
+}
+.contacts__list-item-name[data-v-0cb7b412] {
+  color: #6c7279;
+}
+/*!*****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-4.use[1]!./node_modules/vue-loader/lib/loaders/stylePostLoader.js!./node_modules/postcss-loader/dist/cjs.js??clonedRuleSet-4.use[2]!./node_modules/sass-loader/dist/cjs.js??clonedRuleSet-4.use[3]!./node_modules/vue-loader/lib/index.js??vue-loader-options!./src/components/FeaturesSection.vue?vue&type=style&index=0&id=124d0c30&lang=scss&scoped=true& ***!
   \*****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
 .features[data-v-124d0c30] {
@@ -830,6 +875,8 @@ html {
   flex-wrap: wrap;
   max-width: 1076px;
   row-gap: 74px;
+  box-sizing: border-box;
+  padding: 0 10px;
 }
 @media screen and (max-width: 900px) {
 .features__list[data-v-124d0c30] {
