refactor: add style to mixins

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -8,8 +8,8 @@ $color-light: #ffffff;
 $color-dark: #000000;
 $color-background: #34353b;
 $color-decorate: #f22f20;
-$color-title-dark: #2d3033;
-$color-text-dark: #6c7279;
+$color-text-dark: #2d3033;
+$color-text-light: #6c7279;
 
 $desktop: 1024px;
 $tablet-large: 900px;
