--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -32,9 +32,55 @@
   position: relative;
 }
 
-@mixin title {
+@mixin titleH1 {
   text-transform: uppercase;
-  font-weight: 700;
+  font-size: 90px;
+  font-weight: 900;
   margin: 0;
   text-align: center;
+
+  @media screen and (max-width: $desktop) {
+    font-size: 70px;
+  }
+
+  @media screen and (max-width: $tablet-small) {
+    font-size: 50px;
+    width: 100%;
+  }
+
+  @media screen and (max-width: $smartphone) {
+    font-size: 40px;
+    width: 100%;
+  }
+}
+
+@mixin titleH2 {
+  padding: 70px 20px 40px 20px;
+  font-size: 70px;
+  font-weight: 500;
+  margin: 0;
+  text-transform: uppercase;
+
+  @media screen and (max-width: $tablet) {
+    font-size: 48px;
+  }
+
+  @media screen and (max-width: $smartphone) {
+    font-size: 36px;
+  }
+}
+
+@mixin titleH3 {
+  text-transform: uppercase;
+  font-weight: 900;
+  margin: 0;
+  text-align: center;
+  font-size: 20px;
+}
+
+@mixin text($font-size) {
+  font-size: $font-size;
+  line-height: 1.5;
+  font-weight: 400;
+  margin: 0;
 }
